// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms | CssGrid Conditionally hidden: WRONG way [hidden] 1`] = `
<div
  className="CssGrid__StyledDiv-bu5cxy-0 fVxASH"
>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm bUoTpk"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Left
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm ksQTna"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | CssGrid Conditionally hidden: good way [hidden] 1`] = `
<div
  className="CssGrid__StyledDiv-bu5cxy-0 fVxASH"
>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm bUoTpk"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Left
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm kaIqfW"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      <div>
        This item is mounted and stays mounted no matter what. However, it‘d be hidden with css
      </div>
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm ksQTna"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | CssGrid Conditionally hidden: good way [shown] 1`] = `
<div
  className="CssGrid__StyledDiv-bu5cxy-0 exhgmq"
>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm jdUBvW"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Left
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm eHQBKw"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      <div>
        This item is mounted and stays mounted no matter what. However, it‘d be hidden with css
      </div>
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm idSHvI"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | CssGrid CssGrid with custom gutter 1`] = `
<div
  className="CssGrid__StyledDiv-bu5cxy-0 jrjinV"
>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm dMkyia"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Left
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm cpaVPY"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Top
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm hGPGzG"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Content
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm dUdgNj"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Sidebar
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | CssGrid CssGrid with custom templateColumns 1`] = `
<div
  className="CssGrid__StyledDiv-bu5cxy-0 VlCaH"
>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm dMkyia"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Left
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm cpaVPY"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Top
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm hGPGzG"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Content
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm dUdgNj"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Sidebar
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | CssGrid CssGrid with different layouts for different screen sizes 1`] = `
<div
  className="CssGrid__StyledDiv-bu5cxy-0 bYJZKG"
>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm fKuWIB"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Left
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm edzhVj"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Top
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm OPFnV"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Content
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm ftqBnt"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Sidebar
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | CssGrid CssGrid with minmax() 1`] = `
<div
  className="CssGrid__StyledDiv-bu5cxy-0 ggxZDp"
>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm bUoTpk"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Left
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm cpaVPY"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Top
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm bobjew"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Content
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm iCYbbp"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Sidebar
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | CssGrid CssGrid with object as gutter and custom sized columns 1`] = `
<div
  className="CssGrid__StyledDiv-bu5cxy-0 jlWxIs"
>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm epSNJG"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Left
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm huZzFu"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Top
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm evJVcK"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Content
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm goOQIB"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Messages
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm fgviax"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Order
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm eJpAVL"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Sidebar
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | CssGrid Items With Different Placements 1`] = `
<div
  className="CssGrid__StyledDiv-bu5cxy-0 kmYAyA"
>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm iKTBxP"
  >
    <div
      className="CssGridstories__BgContent-sc-1pgrjiv-1 gABIIE"
    >
      left
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm dRscDi"
  >
    <div
      className="CssGridstories__BgContent-sc-1pgrjiv-1 gABIIE"
    >
      center
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm hGroao"
  >
    <div
      className="CssGridstories__BgContent-sc-1pgrjiv-1 gABIIE"
    >
      stretch
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm hCAkLi"
  >
    <div
      className="CssGridstories__BgContent-sc-1pgrjiv-1 gABIIE"
    >
      end
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm dwASFp"
  >
    <div
      className="CssGridstories__BgContent-sc-1pgrjiv-1 gABIIE"
    >
      left
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm eIzdfE"
  >
    <div
      className="CssGridstories__BgContent-sc-1pgrjiv-1 gABIIE"
    >
      center
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm hYpYoy"
  >
    <div
      className="CssGridstories__BgContent-sc-1pgrjiv-1 gABIIE"
    >
      stretch
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm cafqkk"
  >
    <div
      className="CssGridstories__BgContent-sc-1pgrjiv-1 gABIIE"
    >
      end
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm eufNyN"
  >
    <div
      className="CssGridstories__BgContent-sc-1pgrjiv-1 gABIIE"
    >
      left
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm dkvDtP"
  >
    <div
      className="CssGridstories__BgContent-sc-1pgrjiv-1 gABIIE"
    >
      center
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm kXzRWJ"
  >
    <div
      className="CssGridstories__BgContent-sc-1pgrjiv-1 gABIIE"
    >
      stretch
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm ljFBL"
  >
    <div
      className="CssGridstories__BgContent-sc-1pgrjiv-1 gABIIE"
    >
      end
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | CssGrid Items with different placements 1`] = `
<div
  className="CssGrid__StyledDiv-bu5cxy-0 fVxASH"
>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm bUoTpk"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Left
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm kaIqfW"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      <div>
        This item is mounted and stays mounted no matter what. However, it‘d be hidden with css
      </div>
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm ksQTna"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | CssGrid Shown on md+, hidden on small screens 1`] = `
<div
  className="CssGrid__StyledDiv-bu5cxy-0 kaaaEA"
>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm cNUivk"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Left
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm ejcPtG"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      <div>
        This item is mounted and stays mounted no matter what. However, it‘d be hidden with css
      </div>
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm gJcQAc"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Content
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm kUbdJG"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      something that doesn‘t exist
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | CssGrid Shown on small screen sizes, hidden on md+ 1`] = `
<div
  className="CssGrid__StyledDiv-bu5cxy-0 igXuzL"
>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm cNUivk"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Left
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm eHZoYg"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      <div>
        This item is mounted and stays mounted no matter what. However, it‘d be hidden with css
      </div>
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm kAEOWS"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Content
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm kUbdJG"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      something that doesn‘t exist
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | CssGrid Simple CssGrid 1`] = `
<div
  className="CssGrid__StyledDiv-bu5cxy-0 hkwpmT"
>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm iitozW"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Header
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm bobjew"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Content
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm iTRrDA"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Menu
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm iZcbfB"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Ads
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-AxjAm kjEPlU"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 ianIXz"
    >
      Footer
    </div>
  </div>
</div>
`;
